--- a/package.json
+++ b/package.json
@@ -10,19 +10,37 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean & npm run build:cmjs & npm run build:es6",
     "pub": "npm publish --scope --access public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "typings": "./dist/cmjs/index.d.ts",
   "author": "niuba <niuba.zbz@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@anyres/core": "^0.1.4",
+    "@anyres/core": "^0.2.1",
     "axios": "^0.18.0",
     "rxjs": "^5.5.6",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
   },
   "devDependencies": {
-    "rimraf": "^2.6.2"
+    "@types/jest": "^22.1.4",
+    "jest": "^22.4.2",
+    "json-server": "^0.12.1",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
