--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anyres/axios-adapter",
-  "version": "0.2.5",
+  "version": "0.3.0-rc0",
   "description": "any resource",
   "main": "./dist/cmjs/index.js",
   "module": "./dist/es6/index.js",
@@ -10,26 +10,29 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean & npm run build:cmjs & npm run build:es6",
     "pub": "npm publish --scope --access public",
-    "test": "jest"
+    "test": "npm run clean & jest",
+    "upload:coverage": "codecov ./coverage/lcov.info"
   },
   "typings": "./dist/cmjs/index.d.ts",
   "author": "niuba <niuba.zbz@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@anyres/core": "^0.2.5",
+    "@anyres/core": "^0.3.0",
     "axios": "^0.18.0",
-    "rxjs": "^6.1.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "rxjs": "^6.3.3",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
   },
   "devDependencies": {
-    "@types/jest": "^22.1.4",
-    "jest": "^22.4.2",
-    "json-server": "^0.12.1",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.1"
+    "@types/jest": "^23.3.11",
+    "jest": "^23.6.0",
+    "json-server": "^0.14.2",
+    "rimraf": "^2.6.3",
+    "ts-jest": "^23.10.5"
   },
   "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
