--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "@anyres/axios-adapter",
-  "version": "0.3.0-rc0",
+  "version": "0.3.0-rc1",
   "description": "any resource",
   "main": "./dist/cmjs/index.js",
   "module": "./dist/es6/index.js",
+  "keywords": [
+    "RESTful",
+    "REST",
+    "CRUD",
+    "axios",
+    "anyres"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/anyres/axios-adapter.git"
+  },
   "scripts": {
     "build:cmjs": "tsc -P tsconfig.json",
     "build:es6": "tsc -P tsconfig.json --module ES6 --outDir dist/es6",
@@ -19,6 +30,7 @@
   "dependencies": {
     "@anyres/core": "^0.3.0",
     "axios": "^0.18.0",
+    "codecov": "^3.1.0",
     "rxjs": "^6.3.3",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
